# OpenCV

./: CMakeLists.txt  output.yaml
DFT/: CMakeLists.txt  dft.cpp
IO_image/: CMakeLists.txt  IO_image.cpp
addingImages/: CMakeLists.txt  addingImages.cpp
affine_transform_demo/: CMakeLists.txt  main.cpp
back_projection/: CMakeLists.txt  calcBackProject_Demo1.cpp  calcBackProject_Demo2.cpp  camshiftdemo.cpp
bounding_boxes_and_circles/: CMakeLists.txt  main.cpp
calcHist_demo/: CMakeLists.txt  main.cpp
cannyDetector_demo/: CMakeLists.txt  main.cpp
change_image/: CMakeLists.txt  change_image.cpp
change_the_contrast/: CMakeLists.txt  main.cpp
compareHist_demo/: CMakeLists.txt  main.cpp
copyMakeBorder_Demo/: CMakeLists.txt  main.cpp
displayImage/: CMakeLists.txt  displayImage.cpp
equalizehist_demo/: CMakeLists.txt  main.cpp
eroding_and_dilating/: CMakeLists.txt  main.cpp
file_input_output/: CMakeLists.txt  main.cpp
filter2D_Demo/: CMakeLists.txt  main.cpp
findContours_demo/: CMakeLists.txt  main.cpp
horizon_and_vertical/: CMakeLists.txt  main.cpp
houghcircle_demo/: CMakeLists.txt  main.cpp
houghlines_demo/: CMakeLists.txt  main.cpp
how_to_scan_images/: CMakeLists.txt  main.cpp
hull_demo/: CMakeLists.txt  hull_demo.cpp
imageSegmentation/: CMakeLists.txt  imageSegmentation.cpp
interoperability_with_OpenCV_1/: CMakeLists.txt  main.cpp
laplace_demo/: CMakeLists.txt  main.cpp
mat_mask_operations/: CMakeLists.txt  main.cpp
mat_operations/: CMakeLists.txt  main.cpp
matrix/: CMakeLists.txt  drawing1.cpp  drawing2.cpp
roi/: roi.cpp  (+1 more)
(+24 files in other folders)
